rzk/src/Language/Rzk/Syntax/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.2 from src/Language/Rzk/Syntax/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pModule_internal -> Module                  (0)
	%start_pHoleIdent_internal -> HoleIdent            (1)
	%start_pVarIdent_internal -> VarIdent              (2)
	%start_pListVarIdent_internal -> ListVarIdent      (3)
	%start_pLanguageDecl_internal -> LanguageDecl      (4)
	%start_pLanguage_internal -> Language              (5)
	%start_pCommand_internal -> Command                (6)
	%start_pListCommand_internal -> ListCommand        (7)
	%start_pDeclUsedVars_internal -> DeclUsedVars      (8)
	%start_pSectionName_internal -> SectionName        (9)
	%start_pDataSort_internal -> DataSort              (10)
	%start_pDataBody_internal -> DataBody              (11)
	%start_pConstructor_internal -> Constructor        (12)
	%start_pListConstructor_internal -> ListConstructor   (13)
	%start_pConstructorType_internal -> ConstructorType   (14)
	%start_pDataElim_internal -> DataElim              (15)
	%start_pListDataElim_internal -> ListDataElim      (16)
	%start_pMatchBranch_internal -> MatchBranch        (17)
	%start_pListMatchBranch_internal -> ListMatchBranch   (18)
	%start_pPattern_internal -> Pattern                (19)
	%start_pListPattern_internal -> ListPattern        (20)
	%start_pPattern1_internal -> Pattern1              (21)
	%start_pListPattern1_internal -> ListPattern1      (22)
	%start_pParam_internal -> Param                    (23)
	%start_pListParam_internal -> ListParam            (24)
	%start_pBind_internal -> Bind                      (25)
	%start_pParamDecl_internal -> ParamDecl            (26)
	%start_pSigmaParam_internal -> SigmaParam          (27)
	%start_pListSigmaParam_internal -> ListSigmaParam   (28)
	%start_pRestriction_internal -> Restriction        (29)
	%start_pListRestriction_internal -> ListRestriction   (30)
	%start_pModality_internal -> Modality              (31)
	%start_pModComp_internal -> ModComp                (32)
	%start_pModalColon_internal -> ModalColon          (33)
	%start_pTerm8_internal -> Term8                    (34)
	%start_pTerm5_internal -> Term5                    (35)
	%start_pTerm4_internal -> Term4                    (36)
	%start_pTerm3_internal -> Term3                    (37)
	%start_pTerm2_internal -> Term2                    (38)
	%start_pTerm6_internal -> Term6                    (39)
	%start_pTerm1_internal -> Term1                    (40)
	%start_pTerm7_internal -> Term7                    (41)
	%start_pTerm_internal -> Term                      (42)
	%start_pListTerm_internal -> ListTerm              (43)
	String -> L_quoted                                 (44)
	VarIdentToken -> L_VarIdentToken                   (45)
	HoleIdentToken -> L_HoleIdentToken                 (46)
	Module -> LanguageDecl ListCommand                 (47)
	HoleIdent -> HoleIdentToken                        (48)
	VarIdent -> VarIdentToken                          (49)
	ListVarIdent -> VarIdent                           (50)
	ListVarIdent -> VarIdent ListVarIdent              (51)
	LanguageDecl -> '#lang' Language ';'               (52)
	Language -> 'rzk-1'                                (53)
	Command -> '#set-option' String '=' String         (54)
	Command -> '#unset-option' String                  (55)
	Command -> '#check' Term ':' Term                  (56)
	Command -> '#compute' Term                         (57)
	Command -> '#compute-whnf' Term                    (58)
	Command -> '#compute-nf' Term                      (59)
	Command -> '#postulate' VarIdent DeclUsedVars ListParam ':' Term   (60)
	Command -> '#postulate' VarIdent DeclUsedVars ':' Term   (61)
	Command -> '#assume' ListVarIdent ':' Term         (62)
	Command -> '#variable' VarIdent ':' Term           (63)
	Command -> '#variables' ListVarIdent ':' Term      (64)
	Command -> '#section' SectionName                  (65)
	Command -> '#end' SectionName                      (66)
	Command -> '#define' VarIdent DeclUsedVars ListParam ':' Term ':=' Term   (67)
	Command -> '#define' VarIdent DeclUsedVars ':' Term ':=' Term   (68)
	Command -> '#def' VarIdent DeclUsedVars ListParam ':' Term ':=' Term   (69)
	Command -> '#def' VarIdent DeclUsedVars ':' Term ':=' Term   (70)
	Command -> '#data' VarIdent DeclUsedVars ListParam DataSort DataBody   (71)
	Command -> '#data' VarIdent DeclUsedVars DataSort DataBody   (72)
	ListCommand ->                                     (73)
	ListCommand -> Command ';' ListCommand             (74)
	DeclUsedVars -> 'uses' '(' ListVarIdent ')'        (75)
	DeclUsedVars ->                                    (76)
	SectionName ->                                     (77)
	SectionName -> VarIdent                            (78)
	DataSort -> ':' Term                               (79)
	DataSort ->                                        (80)
	DataBody -> ':=' ListConstructor ListDataElim      (81)
	DataBody ->                                        (82)
	Constructor -> VarIdent ListParam ConstructorType   (83)
	Constructor -> VarIdent ConstructorType            (84)
	ListConstructor -> Constructor                     (85)
	ListConstructor -> Constructor '|' ListConstructor   (86)
	ConstructorType -> ':' Term                        (87)
	ConstructorType ->                                 (88)
	DataElim -> 'eliminate' 'with' VarIdent ':' Term   (89)
	DataElim -> 'compute' 'with' VarIdent ':' Term     (90)
	ListDataElim ->                                    (91)
	ListDataElim -> DataElim ListDataElim              (92)
	MatchBranch -> VarIdent ListPattern '⇒' Term       (93)
	MatchBranch -> VarIdent '⇒' Term                   (94)
	MatchBranch -> VarIdent ListPattern '=>' Term      (95)
	MatchBranch -> VarIdent '=>' Term                  (96)
	ListMatchBranch -> MatchBranch                     (97)
	ListMatchBranch -> MatchBranch '|' ListMatchBranch   (98)
	Pattern -> 'unit'                                  (99)
	Pattern -> VarIdent                                (100)
	Pattern -> '(' Pattern ',' Pattern ')'             (101)
	Pattern -> '(' Pattern ',' Pattern ',' ListPattern1 ')'   (102)
	ListPattern -> Pattern                             (103)
	ListPattern -> Pattern ListPattern                 (104)
	Pattern1 -> Pattern                                (105)
	ListPattern1 -> Pattern1                           (106)
	ListPattern1 -> Pattern1 ',' ListPattern1          (107)
	Param -> Pattern                                   (108)
	Param -> '(' ListPattern ':' Term ')'              (109)
	Param -> '(' ListPattern ':' Term '|' Term ')'     (110)
	Param -> '(' ListPattern ModalColon Term ')'       (111)
	Param -> '(' ListPattern ModalColon Term '|' Term ')'   (112)
	ListParam -> Param                                 (113)
	ListParam -> Param ListParam                       (114)
	Bind -> Pattern                                    (115)
	Bind -> Pattern ':' Term                           (116)
	ParamDecl -> Term6                                 (117)
	ParamDecl -> '(' Term ':' Term ')'                 (118)
	ParamDecl -> '(' Term ':' Term '|' Term ')'        (119)
	ParamDecl -> '(' Term ModalColon Term ')'          (120)
	ParamDecl -> '(' Term ModalColon Term '|' Term ')'   (121)
	SigmaParam -> Pattern ':' Term                     (122)
	SigmaParam -> Pattern ModalColon Term              (123)
	ListSigmaParam -> SigmaParam                       (124)
	ListSigmaParam -> SigmaParam ',' ListSigmaParam    (125)
	Restriction -> Term '↦' Term                       (126)
	Restriction -> Term '|->' Term                     (127)
	ListRestriction -> Restriction                     (128)
	ListRestriction -> Restriction ',' ListRestriction   (129)
	Modality -> '♭'                                    (130)
	Modality -> '_b'                                   (131)
	Modality -> '♯'                                    (132)
	Modality -> '_#'                                   (133)
	Modality -> 'ᵒᵖ'                                   (134)
	Modality -> '_op'                                  (135)
	Modality -> '_id'                                  (136)
	ModComp -> Modality                                (137)
	ModComp -> Modality '/' Modality                   (138)
	ModalColon -> ':♭'                                 (139)
	ModalColon -> ':♯'                                 (140)
	ModalColon -> ':ᵒᵖ'                                (141)
	ModalColon -> ':_id'                               (142)
	ModalColon -> ':_b'                                (143)
	ModalColon -> ':_#'                                (144)
	ModalColon -> ':_op'                               (145)
	Term8 -> 'U'                                       (146)
	Term8 -> 'CUBE'                                    (147)
	Term8 -> 'TOPE'                                    (148)
	Term8 -> '1'                                       (149)
	Term8 -> '*₁'                                      (150)
	Term8 -> '2'                                       (151)
	Term8 -> '0₂'                                      (152)
	Term8 -> '1₂'                                      (153)
	Term8 -> '𝕀'                                       (154)
	Term8 -> '0ᵢ'                                      (155)
	Term8 -> '1ᵢ'                                      (156)
	Term8 -> '⊤'                                       (157)
	Term8 -> '⊥'                                       (158)
	Term8 -> 'recBOT'                                  (159)
	Term8 -> 'recOR' '(' ListRestriction ')'           (160)
	Term8 -> 'Unit'                                    (161)
	Term8 -> '(' Term ',' Term ')'                     (162)
	Term8 -> '(' Term ',' Term ',' ListTerm ')'        (163)
	Term8 -> 'unit'                                    (164)
	Term8 -> 'refl'                                    (165)
	Term8 -> 'refl_{' Term '}'                         (166)
	Term8 -> 'refl_{' Term ':' Term '}'                (167)
	Term8 -> 'idJ' '(' Term ',' Term ',' Term ',' Term ',' Term ',' Term ')'   (168)
	Term8 -> HoleIdent                                 (169)
	Term8 -> VarIdent                                  (170)
	Term8 -> '(' Term ')'                              (171)
	Term8 -> '*_1'                                     (172)
	Term8 -> '0_2'                                     (173)
	Term8 -> '1_2'                                     (174)
	Term8 -> 'II'                                      (175)
	Term8 -> '0_I'                                     (176)
	Term8 -> '1_I'                                     (177)
	Term8 -> 'TOP'                                     (178)
	Term8 -> 'BOT'                                     (179)
	Term5 -> Term5 '×' Term6                           (180)
	Term5 -> Term5 '⊔' Term6                           (181)
	Term5 -> Term5 '⊓' Term6                           (182)
	Term5 -> Term6                                     (183)
	Term5 -> Term5 '*' Term6                           (184)
	Term4 -> Term5 '≡' Term5                           (185)
	Term4 -> Term5 '≤' Term5                           (186)
	Term4 -> Term5                                     (187)
	Term4 -> Term5 '===' Term5                         (188)
	Term4 -> Term5 '<=' Term5                          (189)
	Term3 -> Term4 '∧' Term3                           (190)
	Term3 -> Term4                                     (191)
	Term3 -> Term4 '/\\' Term3                         (192)
	Term2 -> Term3 '∨' Term2                           (193)
	Term2 -> Term3                                     (194)
	Term2 -> Term3 '\\/' Term2                         (195)
	Term6 -> 'invᵒᵖ' Term7                             (196)
	Term6 -> 'inv_op' Term7                            (197)
	Term6 -> 'uninvᵒᵖ' Term7                           (198)
	Term6 -> 'uninv_op' Term7                          (199)
	Term6 -> 'flipᵒᵖ' Term7                            (200)
	Term6 -> 'flip_op' Term7                           (201)
	Term6 -> 'unflipᵒᵖ' Term7                          (202)
	Term6 -> 'unflip_op' Term7                         (203)
	Term6 -> Term6 '[' ListRestriction ']'             (204)
	Term6 -> Term6 Term7                               (205)
	Term6 -> '$extract$' ModComp Term7                 (206)
	Term6 -> 'π₁' Term7                                (207)
	Term6 -> 'π₂' Term7                                (208)
	Term6 -> Term7                                     (209)
	Term6 -> 'sup' Term7 Term7                         (210)
	Term6 -> 'inf' Term7 Term7                         (211)
	Term6 -> 'first' Term7                             (212)
	Term6 -> 'second' Term7                            (213)
	Term1 -> ParamDecl '→' Term1                       (214)
	Term1 -> 'Σ' '(' Pattern ':' Term ')' ',' Term1    (215)
	Term1 -> 'Σ' '(' Pattern ModalColon Term ')' ',' Term1   (216)
	Term1 -> 'Σ' '(' SigmaParam ',' ListSigmaParam ')' ',' Term1   (217)
	Term1 -> Term2 '=_{' Term '}' Term2                (218)
	Term1 -> Term2 '=' Term2                           (219)
	Term1 -> 'let' Bind ':=' Term 'in' Term            (220)
	Term1 -> '\\' ListParam '→' Term1                  (221)
	Term1 -> 'let' Modality Bind ':=' Term 'in' Term   (222)
	Term1 -> 'let' 'mod' Modality Bind ':=' Term 'in' Term   (223)
	Term1 -> 'let' Modality 'mod' Modality Bind ':=' Term 'in' Term   (224)
	Term1 -> 'let' Modality Bind ':=' Term 'into' Term 'in' Term   (225)
	Term1 -> 'let' 'mod' Modality Bind ':=' Term 'into' Term 'in' Term   (226)
	Term1 -> 'let' Modality 'mod' Modality Bind ':=' Term 'into' Term 'in' Term   (227)
	Term1 -> Term2                                     (228)
	Term1 -> ParamDecl '->' Term1                      (229)
	Term1 -> 'Sigma' '(' Pattern ':' Term ')' ',' Term1   (230)
	Term1 -> 'Sigma' '(' Pattern ModalColon Term ')' ',' Term1   (231)
	Term1 -> 'Sigma' '(' SigmaParam ',' ListSigmaParam ')' ',' Term1   (232)
	Term1 -> '\\' ListParam '->' Term1                 (233)
	Term1 -> '∑' '(' Pattern ':' Term ')' ',' Term1    (234)
	Term1 -> '∑' '(' SigmaParam ',' ListSigmaParam ')' ',' Term1   (235)
	Term7 -> 'mod' Modality Term7                      (236)
	Term7 -> Modality Term7                            (237)
	Term7 -> 'match' Term8 '(' ListMatchBranch ')'     (238)
	Term7 -> 'match' Term8 'into' Term8 '(' ListMatchBranch ')'   (239)
	Term7 -> 'match' Modality Term8 '(' ListMatchBranch ')'   (240)
	Term7 -> 'match' Modality Term8 'into' Term8 '(' ListMatchBranch ')'   (241)
	Term7 -> Term8                                     (242)
	Term -> Term2 'as' Term1                           (243)
	Term -> Term1                                      (244)
	ListTerm -> Term                                   (245)
	ListTerm -> Term ',' ListTerm                      (246)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'#assume'      { PT _ (TS _ 1) }
	'#check'       { PT _ (TS _ 2) }
	'#compute'     { PT _ (TS _ 3) }
	'#compute-nf'  { PT _ (TS _ 4) }
	'#compute-whnf'{ PT _ (TS _ 5) }
	'#data'        { PT _ (TS _ 6) }
	'#def'         { PT _ (TS _ 7) }
	'#define'      { PT _ (TS _ 8) }
	'#end'         { PT _ (TS _ 9) }
	'#lang'        { PT _ (TS _ 10) }
	'#postulate'   { PT _ (TS _ 11) }
	'#section'     { PT _ (TS _ 12) }
	'#set-option'  { PT _ (TS _ 13) }
	'#unset-option'{ PT _ (TS _ 14) }
	'#variable'    { PT _ (TS _ 15) }
	'#variables'   { PT _ (TS _ 16) }
	'$extract$'    { PT _ (TS _ 17) }
	'('            { PT _ (TS _ 18) }
	')'            { PT _ (TS _ 19) }
	'*'            { PT _ (TS _ 20) }
	'*_1'          { PT _ (TS _ 21) }
	'*₁'           { PT _ (TS _ 22) }
	','            { PT _ (TS _ 23) }
	'->'           { PT _ (TS _ 24) }
	'/'            { PT _ (TS _ 25) }
	'/\\'          { PT _ (TS _ 26) }
	'0_2'          { PT _ (TS _ 27) }
	'0_I'          { PT _ (TS _ 28) }
	'0ᵢ'           { PT _ (TS _ 29) }
	'0₂'           { PT _ (TS _ 30) }
	'1'            { PT _ (TS _ 31) }
	'1_2'          { PT _ (TS _ 32) }
	'1_I'          { PT _ (TS _ 33) }
	'1ᵢ'           { PT _ (TS _ 34) }
	'1₂'           { PT _ (TS _ 35) }
	'2'            { PT _ (TS _ 36) }
	':'            { PT _ (TS _ 37) }
	':='           { PT _ (TS _ 38) }
	':_#'          { PT _ (TS _ 39) }
	':_b'          { PT _ (TS _ 40) }
	':_id'         { PT _ (TS _ 41) }
	':_op'         { PT _ (TS _ 42) }
	':ᵒᵖ'          { PT _ (TS _ 43) }
	':♭'           { PT _ (TS _ 44) }
	':♯'           { PT _ (TS _ 45) }
	';'            { PT _ (TS _ 46) }
	'<='           { PT _ (TS _ 47) }
	'='            { PT _ (TS _ 48) }
	'==='          { PT _ (TS _ 49) }
	'=>'           { PT _ (TS _ 50) }
	'=_{'          { PT _ (TS _ 51) }
	'BOT'          { PT _ (TS _ 52) }
	'CUBE'         { PT _ (TS _ 53) }
	'II'           { PT _ (TS _ 54) }
	'Sigma'        { PT _ (TS _ 55) }
	'TOP'          { PT _ (TS _ 56) }
	'TOPE'         { PT _ (TS _ 57) }
	'U'            { PT _ (TS _ 58) }
	'Unit'         { PT _ (TS _ 59) }
	'['            { PT _ (TS _ 60) }
	'\\'           { PT _ (TS _ 61) }
	'\\/'          { PT _ (TS _ 62) }
	']'            { PT _ (TS _ 63) }
	'_#'           { PT _ (TS _ 64) }
	'_b'           { PT _ (TS _ 65) }
	'_id'          { PT _ (TS _ 66) }
	'_op'          { PT _ (TS _ 67) }
	'as'           { PT _ (TS _ 68) }
	'compute'      { PT _ (TS _ 69) }
	'eliminate'    { PT _ (TS _ 70) }
	'first'        { PT _ (TS _ 71) }
	'flip_op'      { PT _ (TS _ 72) }
	'flipᵒᵖ'       { PT _ (TS _ 73) }
	'idJ'          { PT _ (TS _ 74) }
	'in'           { PT _ (TS _ 75) }
	'inf'          { PT _ (TS _ 76) }
	'into'         { PT _ (TS _ 77) }
	'inv_op'       { PT _ (TS _ 78) }
	'invᵒᵖ'        { PT _ (TS _ 79) }
	'let'          { PT _ (TS _ 80) }
	'match'        { PT _ (TS _ 81) }
	'mod'          { PT _ (TS _ 82) }
	'recBOT'       { PT _ (TS _ 83) }
	'recOR'        { PT _ (TS _ 84) }
	'refl'         { PT _ (TS _ 85) }
	'refl_{'       { PT _ (TS _ 86) }
	'rzk-1'        { PT _ (TS _ 87) }
	'second'       { PT _ (TS _ 88) }
	'sup'          { PT _ (TS _ 89) }
	'unflip_op'    { PT _ (TS _ 90) }
	'unflipᵒᵖ'     { PT _ (TS _ 91) }
	'uninv_op'     { PT _ (TS _ 92) }
	'uninvᵒᵖ'      { PT _ (TS _ 93) }
	'unit'         { PT _ (TS _ 94) }
	'uses'         { PT _ (TS _ 95) }
	'with'         { PT _ (TS _ 96) }
	'|'            { PT _ (TS _ 97) }
	'|->'          { PT _ (TS _ 98) }
	'}'            { PT _ (TS _ 99) }
	'×'            { PT _ (TS _ 100) }
	'Σ'            { PT _ (TS _ 101) }
	'π₁'           { PT _ (TS _ 102) }
	'π₂'           { PT _ (TS _ 103) }
	'ᵒᵖ'           { PT _ (TS _ 104) }
	'→'            { PT _ (TS _ 105) }
	'↦'            { PT _ (TS _ 106) }
	'⇒'            { PT _ (TS _ 107) }
	'∑'            { PT _ (TS _ 108) }
	'∧'            { PT _ (TS _ 109) }
	'∨'            { PT _ (TS _ 110) }
	'≡'            { PT _ (TS _ 111) }
	'≤'            { PT _ (TS _ 112) }
	'⊓'            { PT _ (TS _ 113) }
	'⊔'            { PT _ (TS _ 114) }
	'⊤'            { PT _ (TS _ 115) }
	'⊥'            { PT _ (TS _ 116) }
	'♭'            { PT _ (TS _ 117) }
	'♯'            { PT _ (TS _ 118) }
	'𝕀'            { PT _ (TS _ 119) }
	L_quoted       { PT _ (TL _) }
	L_VarIdentToken{ PT _ (T_VarIdentToken _) }
	L_HoleIdentToken{ PT _ (T_HoleIdentToken _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pModule_internal rule  0
	%start_pHoleIdent_internal rule  1
	%start_pVarIdent_internal rule  2
	%start_pListVarIdent_internal rule  3
	%start_pLanguageDecl_internal rule  4
	%start_pLanguage_internal rule  5
	%start_pCommand_internal rule  6
	%start_pListCommand_internal rule  7
	%start_pDeclUsedVars_internal rule  8
	%start_pSectionName_internal rule  9
	%start_pDataSort_internal rule  10
	%start_pDataBody_internal rule  11
	%start_pConstructor_internal rule  12
	%start_pListConstructor_internal rule  13
	%start_pConstructorType_internal rule  14
	%start_pDataElim_internal rule  15
	%start_pListDataElim_internal rule  16
	%start_pMatchBranch_internal rule  17
	%start_pListMatchBranch_internal rule  18
	%start_pPattern_internal rule  19
	%start_pListPattern_internal rule  20
	%start_pPattern1_internal rule  21
	%start_pListPattern1_internal rule  22
	%start_pParam_internal rule  23
	%start_pListParam_internal rule  24
	%start_pBind_internal rule  25
	%start_pParamDecl_internal rule  26
	%start_pSigmaParam_internal rule  27
	%start_pListSigmaParam_internal rule  28
	%start_pRestriction_internal rule  29
	%start_pListRestriction_internal rule  30
	%start_pModality_internal rule  31
	%start_pModComp_internal rule  32
	%start_pModalColon_internal rule  33
	%start_pTerm8_internal rule  34
	%start_pTerm5_internal rule  35
	%start_pTerm4_internal rule  36
	%start_pTerm3_internal rule  37
	%start_pTerm2_internal rule  38
	%start_pTerm6_internal rule  39
	%start_pTerm1_internal rule  40
	%start_pTerm7_internal rule  41
	%start_pTerm_internal rule  42
	%start_pListTerm_internal rule  43
	String          rule  44
	VarIdentToken   rule  45
	HoleIdentToken  rule  46
	Module          rule  47
	HoleIdent       rule  48
	VarIdent        rule  49
	ListVarIdent    rules 50, 51
	LanguageDecl    rule  52
	Language        rule  53
	Command         rules 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72
	ListCommand     rules 73, 74
	DeclUsedVars    rules 75, 76
	SectionName     rules 77, 78
	DataSort        rules 79, 80
	DataBody        rules 81, 82
	Constructor     rules 83, 84
	ListConstructor rules 85, 86
	ConstructorType rules 87, 88
	DataElim        rules 89, 90
	ListDataElim    rules 91, 92
	MatchBranch     rules 93, 94, 95, 96
	ListMatchBranch rules 97, 98
	Pattern         rules 99, 100, 101, 102
	ListPattern     rules 103, 104
	Pattern1        rule  105
	ListPattern1    rules 106, 107
	Param           rules 108, 109, 110, 111, 112
	ListParam       rules 113, 114
	Bind            rules 115, 116
	ParamDecl       rules 117, 118, 119, 120, 121
	SigmaParam      rules 122, 123
	ListSigmaParam  rules 124, 125
	Restriction     rules 126, 127
	ListRestriction rules 128, 129
	Modality        rules 130, 131, 132, 133, 134, 135, 136
	ModComp         rules 137, 138
	ModalColon      rules 139, 140, 141, 142, 143, 144, 145
	Term8           rules 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179
	Term5           rules 180, 181, 182, 183, 184
	Term4           rules 185, 186, 187, 188, 189
	Term3           rules 190, 191, 192
	Term2           rules 193, 194, 195
	Term6           rules 196, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207, 208, 209, 210, 211, 212, 213
	Term1           rules 214, 215, 216, 217, 218, 219, 220, 221, 222, 223, 224, 225, 226, 227, 228, 229, 230, 231, 232, 233, 234, 235
	Term7           rules 236, 237, 238, 239, 240, 241, 242
	Term            rules 243, 244
	ListTerm        rules 245, 246

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pModule_internal -> . Module                 (rule 0)

	'#lang'        shift, and enter state 216

	Module         goto state 221
	LanguageDecl   goto state 222

State 1

	%start_pHoleIdent_internal -> . HoleIdent           (rule 1)

	L_HoleIdentTokenshift, and enter state 121

	HoleIdentToken goto state 47
	HoleIdent      goto state 220

State 2

	%start_pVarIdent_internal -> . VarIdent             (rule 2)

	L_VarIdentTokenshift, and enter state 120

	VarIdentToken  goto state 46
	VarIdent       goto state 219

State 3

	%start_pListVarIdent_internal -> . ListVarIdent     (rule 3)

	L_VarIdentTokenshift, and enter state 120

	VarIdentToken  goto state 46
	VarIdent       goto state 217
	ListVarIdent   goto state 218

State 4

	%start_pLanguageDecl_internal -> . LanguageDecl     (rule 4)

	'#lang'        shift, and enter state 216

	LanguageDecl   goto state 215

State 5

	%start_pLanguage_internal -> . Language             (rule 5)

	'rzk-1'        shift, and enter state 214

	Language       goto state 213

State 6

	%start_pCommand_internal -> . Command               (rule 6)

	'#assume'      shift, and enter state 197
	'#check'       shift, and enter state 198
	'#compute'     shift, and enter state 199
	'#compute-nf'  shift, and enter state 200
	'#compute-whnf'shift, and enter state 201
	'#data'        shift, and enter state 202
	'#def'         shift, and enter state 203
	'#define'      shift, and enter state 204
	'#end'         shift, and enter state 205
	'#postulate'   shift, and enter state 206
	'#section'     shift, and enter state 207
	'#set-option'  shift, and enter state 208
	'#unset-option'shift, and enter state 209
	'#variable'    shift, and enter state 210
	'#variables'   shift, and enter state 211

	Command        goto state 212

State 7

	%start_pListCommand_internal -> . ListCommand       (rule 7)

	'#assume'      shift, and enter state 197
	'#check'       shift, and enter state 198
	'#compute'     shift, and enter state 199
	'#compute-nf'  shift, and enter state 200
	'#compute-whnf'shift, and enter state 201
	'#data'        shift, and enter state 202
	'#def'         shift, and enter state 203
	'#define'      shift, and enter state 204
	'#end'         shift, and enter state 205
	'#postulate'   shift, and enter state 206
	'#section'     shift, and enter state 207
	'#set-option'  shift, and enter state 208
	'#unset-option'shift, and enter state 209
	'#variable'    shift, and enter state 210
	'#variables'   shift, and enter state 211
	%eof           reduce using rule 73

	Command        goto state 195
	ListCommand    goto state 196

State 8

	%start_pDeclUsedVars_internal -> . DeclUsedVars     (rule 8)

	'uses'         shift, and enter state 194
	%eof           reduce using rule 76

	DeclUsedVars   goto state 193

State 9

	%start_pSectionName_internal -> . SectionName       (rule 9)

	L_VarIdentTokenshift, and enter state 120
	%eof           reduce using rule 77

	VarIdentToken  goto state 46
	VarIdent       goto state 191
	SectionName    goto state 192

State 10

	%start_pDataSort_internal -> . DataSort             (rule 10)

	':'            shift, and enter state 190
	%eof           reduce using rule 80

	DataSort       goto state 189

State 11

	%start_pDataBody_internal -> . DataBody             (rule 11)

	':='           shift, and enter state 188
	%eof           reduce using rule 82

	DataBody       goto state 187

State 12

	%start_pConstructor_internal -> . Constructor       (rule 12)

	L_VarIdentTokenshift, and enter state 120

	VarIdentToken  goto state 46
	VarIdent       goto state 183
	Constructor    goto state 186

State 13

	%start_pListConstructor_internal -> . ListConstructor    (rule 13)

	L_VarIdentTokenshift, and enter state 120

	VarIdentToken  goto state 46
	VarIdent       goto state 183
	Constructor    goto state 184
	ListConstructorgoto state 185

State 14

	%start_pConstructorType_internal -> . ConstructorType    (rule 14)

	':'            shift, and enter state 182
	%eof           reduce using rule 88

	ConstructorTypegoto state 181

State 15

	%start_pDataElim_internal -> . DataElim             (rule 15)

	'compute'      shift, and enter state 178
	'eliminate'    shift, and enter state 179

	DataElim       goto state 180

State 16

	%start_pListDataElim_internal -> . ListDataElim     (rule 16)

	'compute'      shift, and enter state 178
	'eliminate'    shift, and enter state 179
	%eof           reduce using rule 91

	DataElim       goto state 176
	ListDataElim   goto state 177

State 17

	%start_pMatchBranch_internal -> . MatchBranch       (rule 17)

	L_VarIdentTokenshift, and enter state 120

	VarIdentToken  goto state 46
	VarIdent       goto state 172
	MatchBranch    goto state 175

State 18

	%start_pListMatchBranch_internal -> . ListMatchBranch    (rule 18)

	L_VarIdentTokenshift, and enter state 120

	VarIdentToken  goto state 46
	VarIdent       goto state 172
	MatchBranch    goto state 173
	ListMatchBranchgoto state 174

State 19

	%start_pPattern_internal -> . Pattern               (rule 19)

	'('            shift, and enter state 153
	'unit'         shift, and enter state 154
	L_VarIdentTokenshift, and enter state 120

	VarIdentToken  goto state 46
	VarIdent       goto state 149
	Pattern        goto state 171

State 20

	%start_pListPattern_internal -> . ListPattern       (rule 20)

	'('            shift, and enter state 153
	'unit'         shift, and enter state 154
	L_VarIdentTokenshift, and enter state 120

	VarIdentToken  goto state 46
	VarIdent       goto state 149
	Pattern        goto state 169
	ListPattern    goto state 170

State 21

	%start_pPattern1_internal -> . Pattern1             (rule 21)

	'('            shift, and enter state 153
	'unit'         shift, and enter state 154
	L_VarIdentTokenshift, and enter state 120

	VarIdentToken  goto state 46
	VarIdent       goto state 149
	Pattern        goto state 165
	Pattern1       goto state 168

State 22

	%start_pListPattern1_internal -> . ListPattern1     (rule 22)

	'('            shift, and enter state 153
	'unit'         shift, and enter state 154
	L_VarIdentTokenshift, and enter state 120

	VarIdentToken  goto state 46
	VarIdent       goto state 149
	Pattern        goto state 165
	Pattern1       goto state 166
	ListPattern1   goto state 167

State 23

	%start_pParam_internal -> . Param                   (rule 23)

	'('            shift, and enter state 163
	'unit'         shift, and enter state 154
	L_VarIdentTokenshift, and enter state 120

	VarIdentToken  goto state 46
	VarIdent       goto state 149
	Pattern        goto state 160
	Param          goto state 164

State 24

	%start_pListParam_internal -> . ListParam           (rule 24)

	'('            shift, and enter state 163
	'unit'         shift, and enter state 154
	L_VarIdentTokenshift, and enter state 120

	VarIdentToken  goto state 46
	VarIdent       goto state 149
	Pattern        goto state 160
	Param          goto state 161
	ListParam      goto state 162

State 25

	%start_pBind_internal -> . Bind                     (rule 25)

	'('            shift, and enter state 153
	'unit'         shift, and enter state 154
	L_VarIdentTokenshift, and enter state 120

	VarIdentToken  goto state 46
	VarIdent       goto state 149
	Pattern        goto state 158
	Bind           goto state 159

State 26

	%start_pParamDecl_internal -> . ParamDecl           (rule 26)
